--- a/index.html
+++ b/index.html
@@ -3,9 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Logui</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Login</title>
 </head>
 <body>
-    
+    <header>
+        <div class="container">
+            <h1>Siga-nos</h1>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="#">Sobre o Portal</a>
+                    </li>
+                    <li>
+                        <a href="#">Login</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <section>
+        <div class="container">
+
+        </div>
+    </section>
 </body>
 </html>
