--- a/index.html
+++ b/index.html
@@ -24,7 +24,27 @@
     </header>
     <section>
         <div class="container">
-            
+            <img src="imagens/mulher-celular.jpg" alt="mulher com celular na mão">
+            <div>
+                <h2>Informações em primeira mão</h2>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. At eos veritatis perferendis, accusantium similique eius nobis, tempore illum obcaecati deleniti esse cupiditate et qui quas maiores. Ab nulla libero delectus.
+                </p>
+                <p>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repudiandae fugit neque fugiat cum aliquid facilis odio laudantium dolorem dignissimos obcaecati quidem ducimus nostrum, asperiores natus facere saepe labore eveniet debitis.
+                </p>
+                <ul>
+                    <li>
+                        <img src="imagens/cnn.jgp" alt="CNN Logo">
+                    </li>
+                    <li>
+                        <img src="imagens/g1.jpg" alt="G1 Logo">
+                    </li>
+                    <li>
+                        <img src="imagens/veja.jpg" alt="Veja Logo">
+                    </li>
+                </ul>
+            </div>
         </div>
     </section>
 </body>
