--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </header>
     <section>
         <div class="container">
-            <img src="imagens/mulher-celular.jpg" alt="mulher com celular na mão">
+            <img class="mulher" src="imagens/mulher-celular.jpg" alt="mulher com celular na mão">
             <div>
                 <h2>Informações em primeira mão</h2>
                 <p>
@@ -33,17 +33,28 @@
                 <p>
                     Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repudiandae fugit neque fugiat cum aliquid facilis odio laudantium dolorem dignissimos obcaecati quidem ducimus nostrum, asperiores natus facere saepe labore eveniet debitis.
                 </p>
-                <ul>
-                    <li>
-                        <img src="imagens/cnn.jgp" alt="CNN Logo">
-                    </li>
-                    <li>
-                        <img src="imagens/g1.jpg" alt="G1 Logo">
-                    </li>
-                    <li>
-                        <img src="imagens/veja.jpg" alt="Veja Logo">
-                    </li>
+                <ul class="logo">
+                    <li><img src="imagens/cnn.jpg" alt="CNN Logo"></li>                        
+                    <li><img src="imagens/g1.jpg" alt="G1 Logo"></li>
+                    <li><img src="imagens/veja.jpg" alt="Veja Logo"></li>
                 </ul>
+            </div>
+        </div>
+    </section>
+    <section>
+        <div class="container">
+            <h2>Contato</h2>
+            <div class="formularios">
+                <div>
+                    <h3>Fale conosco</h3>
+                    <form>
+                        <input type="text" placeholder="Seu nome">
+                        <input type="email" placeholder="Seu e-mail">
+                        <input type="tel" placeholder="Seu número (Opicional)">
+                        <textarea placeholder="Sua mensagem"></textarea>
+                        <button type="submit">Enviar</button>
+                    </form>
+                </div>
             </div>
         </div>
     </section>
