--- a/index.html
+++ b/index.html
@@ -55,8 +55,26 @@
                         <button type="submit">Enviar</button>
                     </form>
                 </div>
+                <div>
+                    <h3>Nós acompanhe</h3>
+                    <ul>
+                        <li>
+                            <a href="#" title="Siga-nos no Istagram"></a>
+                            <img src="imagens/instagram.png" alt="Logo instagram">
+                        </li>
+                        <li>
+                            <a href="#" title="Siga-nos no Facebook"></a>
+                            <img src="imagens/facebook.png" alt="Logo Facebook">
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
     </section>
+    <footer>
+        <div class="container">
+            &copy; Meu portal de notícias - Todos os direitos reservados -2024
+        </div>
+    </footer>
 </body>
 </html>
