--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
                 <p>
                     Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repudiandae fugit neque fugiat cum aliquid facilis odio laudantium dolorem dignissimos obcaecati quidem ducimus nostrum, asperiores natus facere saepe labore eveniet debitis.
                 </p>
-                <ul class="logo">
-                    <li><img src="imagens/cnn.jpg" alt="CNN Logo"></li>                        
+                <ul class="logo">                       
                     <li><img src="imagens/g1.jpg" alt="G1 Logo"></li>
                     <li><img src="imagens/veja.jpg" alt="Veja Logo"></li>
                 </ul>
@@ -57,7 +56,7 @@
                 </div>
                 <div>
                     <h3>Nós acompanhe</h3>
-                    <ul>
+                    <ul class="links">
                         <li>
                             <a href="#" title="Siga-nos no Istagram"></a>
                             <img src="imagens/instagram.png" alt="Logo instagram">
