--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </div>
         </div>
     </section>
-    <section>
+    <section id="contato">
         <div class="container">
             <h2>Contato</h2>
             <div class="formularios">
