--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
             <nav>
                 <ul>
                     <li>
-                        <a href="#">Sobre o Portal</a>
+                        <a href="#sobre">Sobre o Portal</a>
                     </li>
                     <li>
-                        <a href="#">Login</a>
+                        <a href="#contato">Login</a>
                     </li>
                 </ul>
             </nav>
         </div>
     </header>
-    <section>
+    <section id="sobre">
         <div class="container">
             <img class="mulher" src="imagens/mulher-celular.jpg" alt="mulher com celular na mão">
             <div>
